# fastapi-base-app

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
fastapi-application/: .env.template  main.py
fastapi-application/alembic/versions/: 2025_02_04_0958-a3f4a5d7dfef_create_users_table.py  2025_02_04_1013-dc8bd0b22d2d_update_users_table.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: users.py
fastapi-application/core/: config.py
fastapi-application/core/models/: base.py  db_helper.py  user.py
fastapi-application/core/schemas/: user.py
fastapi-application/crud/: users.py
fastapi-application/utils/: __init__.py
